add authorization, add password field to User, add services

--- a/WorkoutTracking.WebApi/appsettings.json
+++ b/WorkoutTracking.WebApi/appsettings.json
@@ -11,5 +11,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=training;Trusted_Connection=True;"
+  },
+
+  "JwtConfiguration": {
+    "Issuer": "WorkoutTrackingApiServer",
+    "Audience": "WorkoutTrakingApiClient",
+    "Key": "I_lIke_coLa_zerO",
+    "LifetimeDays": 2
   }
 }
