add register and login controllers, add mapper, add some user models and DTOs

--- a/WorkoutTracking.WebApi/appsettings.json
+++ b/WorkoutTracking.WebApi/appsettings.json
@@ -18,5 +18,12 @@
     "Audience": "WorkoutTrakingApiClient",
     "Key": "I_lIke_coLa_zerO",
     "LifetimeDays": 2
+  },
+
+  "EncryptionConfiguration": {
+    "Iterations": 13909,
+    "HashSize": 128,
+    "SaltSize": 20,
+    "Pepper": "^hn&%3z8GBWNp_TUf6z8"
   }
 }
