add login, registration validators, paginatin service

--- a/WorkoutTracking.WebApi/WorkoutTracking.WebApi.csproj
+++ b/WorkoutTracking.WebApi/WorkoutTracking.WebApi.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.5.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WorkoutTracking.Domain\WorkoutTracking.Domain.csproj" />
+    <ProjectReference Include="..\WorkoutTracking.Domain\WorkoutTracking.Application.csproj" />
   </ItemGroup>
 
 </Project>
