--- a/WorkoutTracking.Domain/WorkoutTracking.Application.csproj
+++ b/WorkoutTracking.Domain/WorkoutTracking.Application.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="FluentValidation" Version="9.5.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.DynamicLinq" Version="5.2.9" />
   </ItemGroup>
 
   <ItemGroup>
