add exercise methods, change training template dto, change training template cloning

--- a/WorkoutTracking.WebApi/appsettings.json
+++ b/WorkoutTracking.WebApi/appsettings.json
@@ -25,5 +25,13 @@
     "HashSize": 128,
     "SaltSize": 20,
     "Pepper": "^hn&%3z8GBWNp_TUf6z8"
+  },
+
+  "PaginationConfiguration": {
+
+  },
+
+  "TrainingConfiguration": {
+    "MaximumExercises":  50
   }
 }
