add training schedule controller

--- a/WorkoutTracking.WebApi/appsettings.json
+++ b/WorkoutTracking.WebApi/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=training;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=training;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
 
   "JwtConfiguration": {
