edit controllers responses, dtos and models moved to library

--- a/WorkoutTracking.Domain/WorkoutTracking.Application.csproj
+++ b/WorkoutTracking.Domain/WorkoutTracking.Application.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Workout-tracking-models\Workout-tracking-models\Workout-tracking-models.csproj" />
     <ProjectReference Include="..\WorkoutTracking.Data\WorkoutTracking.Data.csproj" />
   </ItemGroup>
 
